--- a/Aula04.ipynb
+++ b/Aula04.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBuvOw/URoJGl+23npG4Y2",
+      "authorship_tag": "ABX9TyMeFWljwW5/ZiwmYBoP6QaS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,14 +51,14 @@
       "source": [
         "# Import the Python SDK\n",
         "import google.generativeai as genai\n",
-        "\n",
-        "GOOGLE_API_KEY='AIzaSyC14Mes6yx67oVP587T758ri8Rqrtk6lcc'\n",
-        "genai.configure(api_key=GOOGLE_API_KEY)"
+        "from google.colab import userdata\n",
+        "api_key = userdata.get('SECRET_KEY')\n",
+        "genai.configure(api_key=api_key)"
       ],
       "metadata": {
         "id": "GPgkW_oX69Uq"
       },
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": []
     },
     {
